--- a/style.css
+++ b/style.css
@@ -137,9 +137,25 @@ section:last-child {
 	color: #444;
 }
 
+.keyHons {
+	list-style-type: none;
+	-moz-column-count:3;
+	-webkit-column-count:3;
+	column-count:3;
+	margin-bottom: 10px;
+	font-size: 0.8em;
+	color: #444;
+}
+
+
 .keySkills ul li {
 	margin-bottom: 3px;
 }
+
+.keyHons ul li {
+	margin-bottom: 3px;
+}
+
 
 @media all and (min-width: 602px) and (max-width: 800px) {
 	#headshot {
